fixed font and z-index

--- a/workspace/utilities/admin-tools/admin-tools.css
+++ b/workspace/utilities/admin-tools/admin-tools.css
@@ -5,8 +5,8 @@
 	background-color: #2f77eb;
 	color: white;
 	font-size: 14px;
-	font-family: 'Helevetica', 'Arial' sans-serif;
-	z-index: 99999;
+	font-family: 'Helevetica', 'Arial', sans-serif;
+	z-index: 2147483647;
 }
 
 .admin-tools a{
@@ -22,7 +22,7 @@
 	height: 10px;
 	margin: 5px 0 0 7px;
 	border-radius: 50%;
-	z-index: 99999;
+	z-index: 2147483647;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
